# Hydrogen

./: .gitignore  Cargo.toml  README.md
assets/shaders/: shader.wgsl
src/: app.rs  config.rs  error.rs  main.rs
src/audio/: clock.rs  mod.rs
src/chart/: map.rs  parser.rs
src/engine/: note.rs  scoring.rs  timing.rs
src/engine/judgement/: etterna.rs  mod.rs  osu.rs  stepmania.rs  windows.rs
src/input/: binding.rs  mod.rs
src/render/: buffer.rs  instance.rs  mod.rs  pipeline.rs  texture.rs  ui.rs
src/state/: gameplay.rs  results.rs
