[package]
name = "hydrogen"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
bytemuck = "1.25.0"
env_logger = "0.11.9"
glam = "0.32.1"
image = "0.25.10"
kira = "0.12.0"
log = "0.4.29"
nom = "8.0.0"
pollster = "0.4.0"
raw-window-handle = "0.6.2"
serde = "1.0.228"
thiserror = "2.0.18"
toml = "1.0.6"
walkdir = "2.5.0"
wgpu = "27.0.1"
winit = "0.30.13"
